Dados melhores para o db, bug no cadastro, dashboard de genero e ordenar por idade na home

--- a/src/app/actor/actor-form/actor-form.component.html
+++ b/src/app/actor/actor-form/actor-form.component.html
@@ -16,10 +16,10 @@
           @if(hasError('name', 'required')) {
             O campo é obrigatório
           }
-          @if(hasError('name', 'minlength')) {
+          @else if(hasError('name', 'minlength')) {
             O campo deve ter no mínimo 4 caracteres
           }
-          @if(hasError('name', 'maxlength')) {
+          @else if(hasError('name', 'maxlength')) {
             O campo deve ter no máximo 100 caracteres
           }
         </p>
@@ -30,7 +30,7 @@
           @if(hasError('image', 'required')) {
             O campo é obrigatório
           }
-          @if(hasError('image', 'invalidUrl')) {
+          @else if(hasError('image', 'invalidUrl')) {
             O campo de logo deve ser uma URL válida
           }
         </p>
@@ -41,7 +41,7 @@
           @if(hasError('phone', 'required')) {
             O campo é obrigatório
           }
-          @if(hasError('phone', 'invalidPhone')) {
+          @else if(hasError('phone', 'invalidPhone')) {
             O campo de telefone deve ser um telefone válido
           }
         </p>
@@ -52,7 +52,7 @@
           @if(hasError('birthDate', 'required')) {
             O campo é obrigatório
           }
-          @if(hasError('birthDate', 'invalidDate')) {
+          @else if(hasError('birthDate', 'invalidDate')) {
             O campo de data deve ser uma data válida
           }
         </p>
@@ -63,7 +63,7 @@
           @if(hasError('email', 'required')) {
             O campo é obrigatório
           }
-          @if(hasError('email', 'invalidEmail')) {
+          @else if(hasError('email', 'invalidEmail')) {
             O campo de email deve conter um email válido
           }
         </p>
