--- a/src/app/play/play-form/play-form.component.html
+++ b/src/app/play/play-form/play-form.component.html
@@ -69,6 +69,11 @@
       </ion-item>      
     </ion-list>
   </form>
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button [routerLink]="['/play']">
+      <ion-icon name="chevron-back"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button [disabled]="PlayForm.invalid" (click)="save()">
       <ion-icon name="checkmark"></ion-icon>
