--- a/src/app/actor/actor-form/actor-form.component.html
+++ b/src/app/actor/actor-form/actor-form.component.html
@@ -76,7 +76,7 @@
       </ion-item>
     </ion-list>
   </form>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button [routerLink]="['/actor']">
       <ion-icon name="chevron-back"></ion-icon>
     </ion-fab-button>
