--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,8 +31,8 @@
 
     <ion-row *ngFor="let actor of orderedActor" class="data-row">
       <ion-col size="4">{{ actor.name }}</ion-col>
-      <ion-col size="4">{{ actor.birthDate | date:'dd/MM/yyyy' }}</ion-col>
-      <ion-col size="4">{{ getAge(actor.birthDate) }} anos</ion-col>
+      <ion-col size="4">{{ actor.birth_date | date:'dd/MM/yyyy' }}</ion-col>
+      <ion-col size="4">{{ getAge(actor.birth_date ) }} anos</ion-col>
     </ion-row>
   </ion-grid>
 
