--- a/src/app/actor/actor.page.scss
+++ b/src/app/actor/actor.page.scss
@@ -1,18 +1,18 @@
 .titulo {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #3B82F6;
+  color: var(--ion-color-secondary-contrast);
   text-align: center;
   padding: 12px 0;
   text-transform: uppercase;
   letter-spacing: 2px;
-  border-bottom: 2px solid #3B82F6;
+  border-bottom: 2px solid var(--ion-color-secondary-tint);
   margin-bottom: 16px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 ion-toolbar {
-  background-color: white;
+  background-color: var(--ion-color-secondary-shade);
 }
 
 .card-container {
@@ -29,7 +29,7 @@ ion-toolbar {
   display: flex;
   flex-direction: column;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(30, 58, 138, 0.3);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   max-height: 500px;
   overflow: hidden;
