teatro frontend integrado com o teatro backend

--- a/src/app/theater/theater-form/theater-form.component.html
+++ b/src/app/theater/theater-form/theater-form.component.html
@@ -14,45 +14,46 @@
         <ion-input formControlName="name" labelPlacement="floating" label="Nome *: " type="text"></ion-input>
         <p>
           @if(hasError('name', 'required')) {
-            O campo é obrigatório
+          O campo é obrigatório
           }
           @else if(hasError('name', 'minlength')) {
-            O campo deve ter no mínimo 4 caracteres
+          O campo deve ter no mínimo 4 caracteres
           }
           @else if(hasError('name', 'maxlength')) {
-            O campo deve ter no máximo 100 caracteres
-        }
+          O campo deve ter no máximo 100 caracteres
+          }
       </ion-item>
       <ion-item>
         <ion-input formControlName="image" labelPlacement="floating" label="Logo (URL) *" type="url"></ion-input>
         <p>
           @if(hasError('image', 'required')) {
-            O campo é obrigatório
+          O campo é obrigatório
           }
           @else if(hasError('image', 'invalidUrl')) {
-            O campo de logo deve ser uma URL válida
+          O campo de logo deve ser uma URL válida
           }
         </p>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="phone" labelPlacement="floating" label="Telefone *" [maskito]="phoneMask" [maskitoElement]="maskitoElement"></ion-input>
-          <p>
-            @if(hasError('phone', 'required')) {
-              O campo é obrigatório
-            }
-            @else if(hasError('phone', 'invalidPhone')) {
-              O campo de telefone deve ser um telefone válido
-            }
+        <ion-input formControlName="phone" labelPlacement="floating" label="Telefone *" [maskito]="phoneMask"
+          [maskitoElement]="maskitoElement"></ion-input>
+        <p>
+          @if(hasError('phone', 'required')) {
+          O campo é obrigatório
+          }
+          @else if(hasError('phone', 'invalidPhone')) {
+          O campo de telefone deve ser um telefone válido
+          }
         </p>
       </ion-item>
       <ion-item>
         <ion-input formControlName="email" labelPlacement="floating" label="Email" type="text"></ion-input>
         <p>
           @if(hasError('email', 'required')) {
-            O campo é obrigatório
+          O campo é obrigatório
           }
           @else if(hasError('email', 'invalidEmail')) {
-            O campo de email deve conter um email válido
+          O campo de email deve conter um email válido
           }
         </p>
       </ion-item>
@@ -60,27 +61,28 @@
         <ion-input formControlName="address" labelPlacement="floating" label="Endereço" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="foundation" labelPlacement="floating" label="Fundação *" [maskito]="dateMask" [maskitoElement]="maskitoElement"></ion-input>
+        <ion-input formControlName="foundation" labelPlacement="floating" label="Fundação *" [maskito]="dateMask"
+          [maskitoElement]="maskitoElement"></ion-input>
         <p>
           @if(hasError('foundation', 'required')) {
-            O campo é obrigatório
+          O campo é obrigatório
           }
           @else if(hasError('foundation', 'invalidDate')) {
-            O campo de data deve ser uma data válida
+          O campo de data deve ser uma data válida
           }
         </p>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="capacity" labelPlacement="floating" label="Capacidade" type="text" [maskito]="capacityMask" [maskitoElement]="maskitoElement"></ion-input>
+        <ion-input formControlName="capacity" labelPlacement="floating" label="Capacidade" type="number"></ion-input>
       </ion-item>
       <ion-item>
         <ion-input formControlName="website" labelPlacement="floating" label="Website (URL) *" type="url"></ion-input>
         <p>
           @if(hasError('website', 'required')) {
-            O campo é obrigatório
+          O campo é obrigatório
           }
           @else if(hasError('website', 'invalidUrl')) {
-            O campo de logo deve ser uma URL válida
+          O campo de logo deve ser uma URL válida
           }
         </p>
       </ion-item>
