--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,13 +43,13 @@
       <ion-row class="dashboard-row">
         <ion-col size="6" class="bar-wrapper">
           <div class="bar homem" [style.height.%]="info.homem.percentual">
-            <div class="bar-value">{{ info.homem.percentual }}%</div>
+            <div class="bar-value">{{ info.homem.percentual | number:'1.0-0' }}%</div>
           </div>
           <div class="bar-label">Homem ({{ info.homem.quantidade }})</div>
         </ion-col>
         <ion-col size="6" class="bar-wrapper">
           <div class="bar mulher" [style.height.%]="info.mulher.percentual">
-            <div class="bar-value">{{ info.mulher.percentual }}%</div>
+            <div class="bar-value">{{ info.mulher.percentual | number:'1.0-0' }}%</div>
           </div>
           <div class="bar-label">Mulher ({{ info.mulher.quantidade }})</div>
         </ion-col>
